--- a/templates/docs/examples/layouts/application-demo.html
+++ b/templates/docs/examples/layouts/application-demo.html
@@ -9,9 +9,9 @@
   </div>
 
   <div class="l-navigation">
-    <div class="l-navigation__content">
+    <div class="l-navigation__drawer">
       <p class="demo-controls" style="text-align: right"><span class="js-menu-pin">Pin</span> <span class="js-menu-close">Close</span></p>
-      <code>l-navigation &gt;<br> l-navigation__content</code>
+      <code>l-navigation &gt;<br> l-navigation__drawer</code>
     </div>
   </div>
 
