--- a/scss/_patterns_matrix.scss
+++ b/scss/_patterns_matrix.scss
@@ -124,12 +124,12 @@
     @extend %vf-heading-4;
 
     @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, nudge--h4)} !important;
+      margin-bottom: -#{map-get($nudges, nudge--h4)};
     }
 
     @if ($increase-font-size-on-larger-screens) {
       @media (min-width: $breakpoint-x-large) {
-        margin-bottom: -#{map-get($nudges, nudge--h4-large)} !important;
+        margin-bottom: -#{map-get($nudges, nudge--h4-large)};
       }
     }
   }
