wrap chip values in correct markup

--- a/templates/docs/examples/patterns/chip/multiple.html
+++ b/templates/docs/examples/patterns/chip/multiple.html
@@ -4,9 +4,20 @@
 {% block standalone_css %}patterns_chip{% endblock %}
 
 {% block content %}
-
-<div class="p-chip">AWS</div>
-<div class="p-chip">Azure</div>
-<div class="p-chip">Google cloud platform</div>
+<div class="p-chip">
+  <span class="p-chip__value">
+    AWS
+  </span>
+</div>
+<div class="p-chip">
+  <span class="p-chip__value">
+    Azure
+  </span>
+</div>
+<div class="p-chip">
+  <span class="p-chip__value">
+    Google cloud platform
+  </span>
+</div>
 
 {% endblock %}
