Change suru example button to html button element

--- a/templates/docs/examples/patterns/strips/suru.html
+++ b/templates/docs/examples/patterns/strips/suru.html
@@ -9,7 +9,7 @@
     <div class="col-8">
       <h1>A simple extensible CSS framework</h1>
       <p>Backed by open-source code and written in Sass by the Canonical Web Team.</p>
-      <a class="p-button--positive">Get started</a>
+      <button>Get started</button>
     </div>
   </div>
 </section>
