--- a/scss/standalone/patterns_chip.scss
+++ b/scss/standalone/patterns_chip.scss
@@ -3,3 +3,7 @@
 
 @import '../patterns_chip';
 @include vf-p-chip;
+
+@import '../patterns_icons';
+@include vf-p-icons-common;
+@include vf-p-icon-close;
