--- a/templates/docs/examples/patterns/strips/suru.html
+++ b/templates/docs/examples/patterns/strips/suru.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_strip{% endblock %}
 
 {% block content %}
-<section class="p-strip--suru is-dark">
+<section class="p-strip--suru">
   <div class="row u-vertically-center">
     <div class="col-8">
       <h1>A simple extensible CSS framework</h1>
