Reformat code using prettier

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -106,7 +106,7 @@
 }
 
 @mixin vf-p-strip-shallow {
-  [class*='p-strip']:not([class*="suru"]).is-shallow {
+  [class*='p-strip']:not([class*='suru']).is-shallow {
     @extend %section-padding--shallow;
   }
 }
