Add application layout structure documentation

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -112,6 +112,7 @@
 
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Layouts</span></li>
+              {{ side_nav_item("/docs/layouts/application", "Application", "new") }}
               {{ side_nav_item("/docs/layouts/documentation", "Documentation") }}
             </ul>
 
