--- a/templates/docs/examples/layouts/application-structure.html
+++ b/templates/docs/examples/layouts/application-structure.html
@@ -1,8 +1,7 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}Application / Demo{% endblock %}
+{% block title %}Application / Structure{% endblock %}
 
 {% block content %}
-
 <div class="l-application  app-demo">
   <div class="l-navigation-bar">
     <div class="u-clearfix"><code>l-navigation-bar</code> <span class="u-float-right js-menu-toggle">Menu</span></div>
