Improve styling of application layout structure demo

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -125,15 +125,22 @@
 
   // minimal demo styling
   .l-application.app-demo {
+    & > .l-navigation-bar,
     & > .l-navigation .l-navigation__drawer,
     & > .l-main,
     & > .l-aside,
     & > .l-status {
-      padding: $sp-small;
+      padding: $spv-inner--large;
     }
 
+    & > .l-navigation-bar,
     & > .l-navigation .l-navigation__drawer {
-      background: $color-mid;
+      background: $color-dark;
+    }
+
+    & > .l-navigation-bar {
+      padding-bottom: $spv-inner--x-small;
+      padding-top: $spv-inner--x-small;
     }
 
     & > .l-aside {
@@ -144,6 +151,8 @@
 
     & > .l-status {
       background: $color-light;
+      padding-bottom: $spv-inner--small;
+      padding-top: $spv-inner--small;
     }
   }
 }
