--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -202,6 +202,9 @@ $box-offsets-top: (
     }
   }
 
+  $tick-height: 0.375rem;
+  $tick-offset-top: 0.1875rem;
+
   [type='checkbox'] {
     @extend %vf-tick-elements;
 
@@ -214,8 +217,6 @@ $box-offsets-top: (
 
       //tick
       &::after {
-        $tick-height: 0.375rem;
-
         border-bottom: 2px solid;
         border-left: 2px solid;
         height: $tick-height;
@@ -223,8 +224,6 @@ $box-offsets-top: (
         transform: rotate(-45deg);
         width: 0.625rem;
       }
-
-      $tick-offset-top: 0.1875rem;
 
       // Align with different text styles
       @media (max-width: $breakpoint-heading-threshold) {
@@ -438,6 +437,63 @@ $box-offsets-top: (
     & + label::before {
       background-color: $color-link;
       border-color: $color-link;
+    }
+  }
+
+  .p-checkbox,
+  .p-checkbox--heading,
+  .p-checkbox--inline {
+    align-items: baseline;
+    display: flex;
+
+    .p-checkbox__input {
+      position: relative;
+      top: 0.15rem; // nudge a bit below baseline (to correctly align with default text size)
+
+      [type='checkbox'] {
+        bottom: 0;
+        height: $box-size;
+        margin: 0;
+        width: $box-size;
+      }
+
+      label {
+        margin: 0;
+
+        &::before {
+          bottom: 0;
+          top: auto;
+        }
+
+        &::after {
+          bottom: $box-size - $tick-height - $tick-offset-top;
+          top: auto;
+        }
+      }
+    }
+
+    &.is-disabled .p-checkbox__label {
+      @extend %vf-disabled-element;
+    }
+  }
+
+  .p-checkbox--inline {
+    display: inline-flex;
+
+    .p-checkbox__label {
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  .p-checkbox--heading {
+    .p-checkbox__input {
+      top: 0;
+    }
+
+    .p-checkbox__label {
+      margin: 0;
+      padding: 0;
     }
   }
 
