Extract checkbox pattern to separate file

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -14,6 +14,7 @@
 @import 'patterns_divider';
 @import 'patterns_form-help-text';
 @import 'patterns_form-validation';
+@import 'patterns_form-tick-elements';
 @import 'patterns_forms';
 @import 'patterns_grid';
 @import 'patterns_heading-icon';
@@ -88,6 +89,7 @@
   @include vf-p-divider;
   @include vf-p-form-help-text;
   @include vf-p-form-validation;
+  @include vf-p-form-tick-elements;
   @include vf-p-forms;
   @include deprecate('3.0.0', 'vf-p-grid-modifications mixin will be removed') {
     @include vf-p-grid-modifications;
