--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -1,8 +1,10 @@
 // tick element variables
-$box-size: 1rem;
+$form-tick-box-size: 1rem;
+$form-tick-height: 0.375rem;
+$form-tick-offset-top: 0.1875rem;
 
 // Offsets to align tick elements to the baseline of headings.
-$box-offsets-top: (
+$form-tick-box-offsets-top: (
   h1-small-screens: 5,
   h1: 6,
   h2-small-screens: 4,
@@ -33,7 +35,7 @@ $box-offsets-top: (
     }
 
     & + label {
-      padding-left: $sph-inner + $box-size;
+      padding-left: $sph-inner + $form-tick-box-size;
       position: relative;
 
       &::before,
@@ -47,10 +49,10 @@ $box-offsets-top: (
       // container
       &::before {
         content: '';
-        height: $box-size;
+        height: $form-tick-box-size;
         left: 0;
         outline-offset: 1px;
-        width: $box-size;
+        width: $form-tick-box-size;
       }
 
       // Align with different text styles
@@ -61,39 +63,39 @@ $box-offsets-top: (
         &:not(.is-h4)::before,
         &:not(.is-muted-heading)::before,
         &:not(.is-inline-label)::before {
-          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::before {
-          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::before {
-          top: #{$sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -104,39 +106,39 @@ $box-offsets-top: (
         &:not(.is-h4)::before,
         &:not(.is-muted-heading)::before,
         &:not(.is-inline-label)::before {
-          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h1) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h2) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h3) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h4) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::before {
-          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::before {
-          top: #{$sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -202,9 +204,6 @@ $box-offsets-top: (
     }
   }
 
-  $tick-height: 0.375rem;
-  $tick-offset-top: 0.1875rem;
-
   [type='checkbox'] {
     @extend %vf-tick-elements;
 
@@ -219,8 +218,8 @@ $box-offsets-top: (
       &::after {
         border-bottom: 2px solid;
         border-left: 2px solid;
-        height: $tick-height;
-        left: $tick-height * 0.5;
+        height: $form-tick-height;
+        left: $form-tick-height * 0.5;
         transform: rotate(-45deg);
         width: 0.625rem;
       }
@@ -233,39 +232,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -276,39 +275,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$form-tick-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
     }
@@ -322,7 +321,7 @@ $box-offsets-top: (
   [type='radio'] {
     @extend %vf-tick-elements;
     $inner-circle-diameter: 0.375rem;
-    $circle-offset-top: 0.5 * ($box-size - $inner-circle-diameter);
+    $circle-offset-top: 0.5 * ($form-tick-box-size - $inner-circle-diameter);
 
     // stylelint-disable selector-no-qualifying-type
     & + label {
@@ -334,8 +333,8 @@ $box-offsets-top: (
       &::after {
         border-radius: 50%;
         height: $inner-circle-diameter;
-        left: #{($box-size - $inner-circle-diameter) * 0.5};
-        // top: #{$box-offset-top + 0.5 * ($box-size - $inner-circle-diameter)};
+        left: #{($form-tick-box-size - $inner-circle-diameter) * 0.5};
+        // top: #{$box-offset-top + 0.5 * ($form-tick-box-size - $inner-circle-diameter)};
         width: $inner-circle-diameter;
       }
 
@@ -347,39 +346,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -390,39 +389,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
     }
@@ -437,63 +436,6 @@ $box-offsets-top: (
     & + label::before {
       background-color: $color-link;
       border-color: $color-link;
-    }
-  }
-
-  .p-checkbox,
-  .p-checkbox--heading,
-  .p-checkbox--inline {
-    align-items: baseline;
-    display: flex;
-
-    .p-checkbox__input {
-      position: relative;
-      top: 0.15rem; // nudge a bit below baseline (to correctly align with default text size)
-
-      [type='checkbox'] {
-        bottom: 0;
-        height: $box-size;
-        margin: 0;
-        width: $box-size;
-      }
-
-      label {
-        margin: 0;
-
-        &::before {
-          bottom: 0;
-          top: auto;
-        }
-
-        &::after {
-          bottom: $box-size - $tick-height - $tick-offset-top;
-          top: auto;
-        }
-      }
-    }
-
-    &.is-disabled .p-checkbox__label {
-      @extend %vf-disabled-element;
-    }
-  }
-
-  .p-checkbox--inline {
-    display: inline-flex;
-
-    .p-checkbox__label {
-      margin: 0;
-      padding: 0;
-    }
-  }
-
-  .p-checkbox--heading {
-    .p-checkbox__input {
-      top: 0;
-    }
-
-    .p-checkbox__label {
-      margin: 0;
-      padding: 0;
     }
   }
 
