--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -7,7 +7,7 @@
 <form>
 <div class="row">
   <div class="col-6">
-    <h3>Base</h3>
+    <h3>Base checkbox</h3>
 
     <input type="checkbox" id="checkExampleBase">
     <label for="checkExampleBase">checkbox</label>
@@ -62,14 +62,14 @@
   </div>
 
   <div class="col-6">
-    <h3>Pattern</h3>
+    <h3>.p-checkbox component</h3>
 
     <div class="p-checkbox">
       <div class="p-checkbox__input">
         <input type="checkbox" id="checkExamplePattern">
         <label for="checkExamplePattern">
       </div>
-      <label class="p-checkbox__label" for="checkExamplePattern">p-checkbox</label>
+      <label class="p-checkbox__label" for="checkExamplePattern">.p-checkbox</label>
     </div>
 
     <div class="p-checkbox">
@@ -190,5 +190,192 @@
 <div class="u-fixed-width">
   <input class="p-button--positive" type="submit" />
 </div>
+
+<div class="row">
+  <div class="col-6">
+    <h3>Base radio</h3>
+
+    <input type="radio" id="radioExampleBase" name="radioBase">
+    <label for="radioExampleBase">radio</label>
+
+    <input type="radio" id="radioExampleBaseChecked" name="radioBase" checked>
+    <label for="radioExampleBaseChecked">checked</label>
+
+    <input type="radio" id="radioExampleBaseDisabled" name="radioBase" disabled>
+    <label for="radioExampleBaseDisabled">disabled</label>
+
+    <input type="radio" id="radioExampleBaseRequired" name="radioBase" required>
+    <label class="is-required" for="radioExampleBaseRequired">required</label>
+
+    <input type="radio" id="radioExampleBaseH1" name="radioBase">
+    <label class="is-h1" for="radioExampleBaseH1">.is-h1</label>
+
+    <input type="radio" id="radioExampleBaseH2" name="radioBase">
+    <label class="is-h2" for="radioExampleBaseH2">.is-h2</label>
+
+    <input type="radio" id="radioExampleBaseH3" name="radioBase">
+    <label class="is-h3" for="radioExampleBaseH3">.is-h3</label>
+
+    <input type="radio" id="radioExampleBaseH4" name="radioBase">
+    <label class="is-h4" for="radioExampleBaseH4">.is-h4</label>
+
+    <p>
+      <input type="radio" id="radioExampleBaseInline" name="radioBase">
+      <label class="is-inline-label" for="radioExampleBaseInline">.is-inline-label</label>
+      alongside some text
+    </p>
+
+    <table>
+      <thead>
+        <tr><th>
+          <input type="radio" id="radioExampleBaseTable" name="radioBase">
+          <label class="is-table-header" for="radioExampleBaseTable">.is-table-header</label>
+        </th></tr>
+      </thead>
+    </table>
+
+    <p class="p-muted-heading">
+      <input type="radio" id="radioExampleBaseMuted" name="radioBase">
+      <label class="is-muted-heading" for="radioExampleBaseMuted">.is-muted-heading</label>
+    </p>
+
+    <p>
+      <input type="radio" id="radioExampleBaseInlineMuted" name="radioBase">
+      <label class="is-muted-inline-heading" for="radioExampleBaseInlineMuted">.is-muted-inline-heading</label>
+      alongside some text
+    </p>
+
+  </div>
+
+  <div class="col-6">
+    <h3>.p-radio component</h3>
+
+    <div class="p-radio">
+      <div class="p-radio__input">
+        <input type="radio" id="radioExamplePattern" name="radioPattern">
+        <label for="radioExamplePattern">
+      </div>
+      <label class="p-radio__label" for="radioExamplePattern">.p-radio</label>
+    </div>
+
+    <div class="p-radio">
+      <div class="p-radio__input">
+        <input type="radio" id="radioExamplePatternChecked" name="radioPattern" checked>
+        <label for="radioExamplePatternChecked">
+      </div>
+      <label class="p-radio__label" for="radioExamplePatternChecked">checked</label>
+    </div>
+
+    <div class="p-radio is-disabled">
+      <div class="p-radio__input">
+        <input type="radio" id="radioExamplePatternDisabled" name="radioPattern" disabled>
+        <label for="radioExamplePatternDisabled">
+      </div>
+      <label class="p-radio__label" for="radioExamplePatternDisabled">.is-disabled</label>
+    </div>
+
+    <div class="p-radio">
+      <div class="p-radio__input">
+        <input type="radio" id="radioExamplePatternRequired" name="radioPattern" required>
+        <label for="radioExamplePatternRequired">
+      </div>
+      <label class="p-radio__label is-required" for="radioExamplePatternRequired">required</label>
+    </div>
+
+    <h1>
+      <div class="p-radio--heading">
+        <div class="p-radio__input">
+          <input type="radio" id="radioExamplePatternH1" name="radioPattern">
+          <label for="radioExamplePatternH1">
+        </div>
+        <label class="p-radio__label" for="radioExamplePatternH1">.p-radio--heading</label>
+      </div>
+    </h1>
+
+    <h2>
+      <div class="p-radio--heading">
+        <div class="p-radio__input">
+          <input type="radio" id="radioExamplePatternH2" name="radioPattern">
+          <label for="radioExamplePatternH2">
+        </div>
+        <label class="p-radio__label" for="radioExamplePatternH2">.p-radio--heading</label>
+      </div>
+    </h2>
+
+    <h3>
+      <div class="p-radio--heading">
+        <div class="p-radio__input">
+          <input type="radio" id="radioExamplePatternH3" name="radioPattern">
+          <label for="radioExamplePatternH3">
+        </div>
+        <label class="p-radio__label" for="radioExamplePatternH3">.p-radio--heading</label>
+      </div>
+    </h3>
+
+    <h4>
+      <div class="p-radio--heading">
+        <div class="p-radio__input">
+          <input type="radio" id="radioExamplePatternH4" name="radioPattern">
+          <label for="radioExamplePatternH4">
+        </div>
+        <label class="p-radio__label" for="radioExamplePatternH4">.p-radio--heading</label>
+      </div>
+    </h4>
+
+    <p>
+      <span class="p-radio--inline">
+        <span class="p-radio__input">
+          <input type="radio" id="radioExamplePatternInline" name="radioPattern">
+          <label for="radioExamplePatternInline">
+        </span>
+        <label class="p-radio__label" for="radioExamplePatternInline">.p-radio--inline</label>
+      </span>
+      alonside some text
+    </p>
+
+    <table>
+      <thead>
+        <tr><th>
+          <span class="p-radio--inline">
+            <span class="p-radio__input">
+              <input type="radio" id="radioExamplePatternTable" name="radioPattern">
+              <label for="radioExamplePatternTable">
+            </span>
+            <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in table</label>
+          </span>
+        </th></tr>
+      </thead>
+    </table>
+
+    <p class="p-muted-heading">
+      <span class="p-radio--inline">
+        <span class="p-radio__input">
+          <input type="radio" id="radioExamplePatternMutedHeading" name="radioPattern">
+          <label for="radioExamplePatternMutedHeading">
+        </span>
+        <label class="p-radio__label" for="radioExamplePatternMutedHeading">.p-radio--inline in .p-muted-heading</label>
+      </span>
+    </p>
+
+    <p>
+      <span class="p-muted-heading">
+        <span class="p-radio--inline">
+          <span class="p-radio__input">
+            <input type="radio" id="radioExamplePatternMutedInlineHeading" name="radioPattern">
+            <label for="radioExamplePatternMutedInlineHeading">
+          </span>
+          <label class="p-radio__label" for="radioExamplePatternMutedInlineHeading">.p-radio--inline in .p-muted-heading</label>
+        </span>
+      </span>
+      alongside text
+    </p>
+
+  </div>
+</div>
+
+<div class="u-fixed-width">
+  <input class="p-button--positive" type="submit" />
+</div>
+
 </form>
 {% endblock %}
