--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -3,6 +3,9 @@ $form-tick-box-size: 1rem;
 $form-tick-height: 0.375rem;
 $form-tick-offset-top: 0.1875rem;
 
+$form-radio-inner-circle-diameter: 0.375rem;
+$form-radio-circle-offset: 0.5 * ($form-tick-box-size - $form-radio-inner-circle-diameter);
+
 // Offsets to align tick elements to the baseline of headings.
 $form-tick-box-offsets-top: (
   h1-small-screens: 5,
@@ -320,8 +323,6 @@ $form-tick-box-offsets-top: (
 
   [type='radio'] {
     @extend %vf-tick-elements;
-    $inner-circle-diameter: 0.375rem;
-    $circle-offset-top: 0.5 * ($form-tick-box-size - $inner-circle-diameter);
 
     // stylelint-disable selector-no-qualifying-type
     & + label {
@@ -332,10 +333,10 @@ $form-tick-box-offsets-top: (
 
       &::after {
         border-radius: 50%;
-        height: $inner-circle-diameter;
-        left: #{($form-tick-box-size - $inner-circle-diameter) * 0.5};
-        // top: #{$box-offset-top + 0.5 * ($form-tick-box-size - $inner-circle-diameter)};
-        width: $inner-circle-diameter;
+        height: $form-radio-inner-circle-diameter;
+        left: #{($form-tick-box-size - $form-radio-inner-circle-diameter) * 0.5};
+        // top: #{$box-offset-top + 0.5 * ($form-tick-box-size - $form-radio-inner-circle-diameter)};
+        width: $form-radio-inner-circle-diameter;
       }
 
       // Align with different text styles
@@ -346,39 +347,39 @@ $form-tick-box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h1-small-screens) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h2-small-screens) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h3-small-screens) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h4-small-screens) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -389,39 +390,39 @@ $form-tick-box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h1) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h2) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h3) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, h4) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
+          top: #{$form-radio-circle-offset + $sp-unit * map-get($form-tick-box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
     }
