--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -1,7 +1,7 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}Forms / Tick elements comparison{% endblock %}
 
-{% block standalone_css %}base{% endblock %}
+{% block standalone_css %}patterns_form-tick-elements{% endblock %}
 
 {% block content %}
 <form>
