Improve tables in the example

--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -41,11 +41,27 @@
 
     <table>
       <thead>
-        <tr><th>
-          <input type="checkbox" id="checkExampleBaseTable">
-          <label class="is-table-header" for="checkExampleBaseTable">.is-table-header</label>
-        </th></tr>
+        <tr>
+          <th>
+            <input type="checkbox" id="checkExampleBaseTable">
+            <label class="is-table-header" for="checkExampleBaseTable">.is-table-header</label>
+          </th>
+          <th>
+            Text in adjacent cell
+          </th>
+        </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>
+            <input type="checkbox" id="checkExampleBaseTableCell">
+            <label class="is-inline-label" for="checkExampleBaseTableCell">.is-inline-label</label>
+          </td>
+          <td>
+            Text in adjacent cell
+          </td>
+        </tr>
+      </tbody>
     </table>
 
     <p class="p-muted-heading">
@@ -149,16 +165,37 @@
 
     <table>
       <thead>
-        <tr><th>
-          <span class="p-checkbox--inline">
-            <span class="p-checkbox__input">
-              <input type="checkbox" id="checkExamplePatternTable">
-              <label for="checkExamplePatternTable">
+        <tr>
+          <th>
+            <span class="p-checkbox--inline">
+              <span class="p-checkbox__input">
+                <input type="checkbox" id="checkExamplePatternTable">
+                <label for="checkExamplePatternTable">
+              </span>
+              <label class="p-checkbox__label" for="checkExamplePatternTable">.p-checkbox--inline in TH</label>
             </span>
-            <label class="p-checkbox__label" for="checkExamplePatternTable">.p-checkbox--inline in table</label>
-          </span>
-        </th></tr>
+          </th>
+          <th>
+            Text in adjacent cell
+          </th>
+        </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>
+            <span class="p-checkbox--inline">
+              <span class="p-checkbox__input">
+                <input type="checkbox" id="checkExamplePatternTableInline">
+                <label for="checkExamplePatternInline">
+              </span>
+              <label class="p-checkbox__label" for="checkExamplePatternTableInline">.p-checkbox--inline in td</label>
+            </span>
+          </td>
+          <td>
+            Text in adjacent cell
+          </td>
+        </tr>
+      </tbody>
     </table>
 
     <p class="p-muted-heading">
@@ -227,11 +264,27 @@
 
     <table>
       <thead>
-        <tr><th>
-          <input type="radio" id="radioExampleBaseTable" name="radioBase">
-          <label class="is-table-header" for="radioExampleBaseTable">.is-table-header</label>
-        </th></tr>
+        <tr>
+          <th>
+            <input type="radio" id="radioExampleBaseTable" name="radioBase">
+            <label class="is-table-header" for="radioExampleBaseTable">.is-table-header</label>
+          </th>
+          <th>
+            Text in adjacent cell
+          </th>
+        </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>
+            <input type="checkbox" id="checkExampleBaseTableCell">
+            <label class="is-inline-label" for="checkExampleBaseTableCell">.is-inline-label</label>
+          </td>
+          <td>
+            Text in adjacent cell
+          </td>
+        </tr>
+      </tbody>
     </table>
 
     <p class="p-muted-heading">
@@ -335,16 +388,37 @@
 
     <table>
       <thead>
-        <tr><th>
-          <span class="p-radio--inline">
-            <span class="p-radio__input">
-              <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-              <label for="radioExamplePatternTable">
+        <tr>
+          <th>
+            <span class="p-radio--inline">
+              <span class="p-radio__input">
+                <input type="radio" id="radioExamplePatternTable" name="radioPattern">
+                <label for="radioExamplePatternTable">
+              </span>
+              <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in th</label>
             </span>
-            <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in table</label>
-          </span>
-        </th></tr>
+          </th>
+          <th>
+            Text in adjacent cell
+          </th>
+        </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>
+            <span class="p-radio--inline">
+              <span class="p-radio__input">
+                <input type="radio" id="radioExamplePatternTable" name="radioPattern">
+                <label for="radioExamplePatternTable">
+              </span>
+              <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in td</label>
+            </span>
+          </td>
+          <td>
+            Text in adjacent cell
+          </td>
+        </tr>
+      </tbody>
     </table>
 
     <p class="p-muted-heading">
